# symmetrical-octo-garbanzo

./: .env  .gitignore  README.md  docker-compose.yml  env
bench/: run.sh
bench/simulation/: NumbersSimulation.scala
docker/: init.sql  node.Dockerfile  rust.Dockerfile
node/: .gitignore  package-lock.json  package.json  start.sh
node/src/: index.ts  mikro-orm.config.ts  numbers.ts
node/src/entities/: number.ts
rust/: Cargo.toml  start.sh  test.http
rust/src/: main.rs
rust/src/api/: number.rs
rust/src/entities/: mod.rs  number.rs
