[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing-actix-web = "0.7"
tracing = "0.1"
actix-web = "4"
serde = "1"
serde_json = "1"
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-json",
] }
dotenv = "0.15.0"
tracing-subscriber = { version = "0.3.17", features = [
    "registry",
    "env-filter",
] }
actix-files = "0.6.2"
